add trandind section ata not working

--- a/index.html
+++ b/index.html
@@ -42,9 +42,27 @@
   <main>
   <!-- category section start-->
     <section id="categoryContainer" class="my-5 py-3 px-2 bg-slate-200 rounded-lg flex justify-between">
-      
+  
     </section>
   <!-- category section end-->
+  <!-- tranding and others -->
+  <div class="flex justify-between">
+    <div class="">
+      <span class="font-semibold">Sort By View:</span>
+      <!-- select -->
+      <select class="select select-success  max-w-xs">
+        <option disabled selected>Default</option>
+        <option>One Star</option>
+        <option>Three Star</option>
+        <option>Four Star</option>
+      </select>
+    </div>
+    <div class="">
+      <button class="btn bg-blue-600">Today’s Pick</button>
+      <button class="btn btn-outline btn-primary text-blue-700">Trending</button>
+    </div>
+  </div>
+  <!-- tranding and others -->
 
 <!-- my-modal-5 start -->
 
